Added SEO friendly Title for all the Pages

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,7 +11,7 @@
       name="description"
       content="AZ Holidays - Best Singapore Tours and Attractions"
     />
-    <title>AZ Holidays - Singapore Tours</title>
+    <title>AZ Holidays</title>
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7S4FELQKBX"></script>
